# ppt-pilot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PRODUCT.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  errors.py  events.py  export.py  main.py  outline.py  presentation.py  projects.py  repository.py  requirements.py  routes.py  shared_schema_adapter.py  shared_schema_constants.py  shared_schema_smoke.py  slide_plan.py  workflow.py
apps/api/app/agents/: __init__.py  _generate.py  discovery.py  gap.py  models.py  outline.py  policy.py  prompts.py  question.py  slide_planner.py  spec_builder.py
apps/api/app/llm/: __init__.py
apps/api/scripts/: llm_doctor.py  llm_smoke.py  smoke_shared_schema.py
apps/api/tests/: conftest.py  test_agents.py  test_contract.py  test_export.py  test_llm_provider.py  test_outline.py  test_phase3_contract.py  test_phase5_e2e.py  test_phase6_e2e.py  test_phase7_e2e.py  test_presentation.py  test_requirements.py  test_slide_plan.py
apps/web/: README.md  next-env.d.ts  next.config.mjs  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/scripts/: smoke-start.mjs
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CI_GATES.md  DATA_MODEL.md  PROMPTS.md  ROADMAP.md  ROADMAP_PROGRESS.md  TASKS.md  UI.md  WORKFLOW.md
openspec/: config.yaml
openspec/changes/phase-1-foundation-monorepo-and-shared-schema/: proposal.md  tasks.md
openspec/specs/event-log/: spec.md
(+122 files in other folders)
