[project]
name = "ppt-pilot-api"
version = "0.1.0"
description = "Phase 1 FastAPI shell for PPTPilot."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[project.scripts]
ppt-pilot-api = "app.main:run"
ppt-pilot-api-schema-smoke = "app.shared_schema_smoke:main"
