[project]
name = "ppt-pilot-api"
version = "0.1.0"
description = "Phase 1 FastAPI shell for PPTPilot."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "python-dotenv>=1,<2",
  "python-pptx==1.0.2"
]

# Test-only tooling (TestClient needs httpx). Not runtime infra: does not
# introduce PostgreSQL/Redis/Celery/RQ/S3/auth (task 1.5).
[project.optional-dependencies]
test = [
  "pytest>=8,<10",
  "httpx>=0.27,<1.0"
]

[tool.pytest.ini_options]
# Make the flat-layout `app` package importable under bare `pytest`
# (`python -m pytest` adds cwd itself; the console script does not).
pythonpath = ["."]
testpaths = ["tests"]

[project.scripts]
ppt-pilot-api = "app.main:run"
ppt-pilot-api-schema-smoke = "app.shared_schema_smoke:main"
